<resources>
    <string name="app_name">Forecast</string>
    <string name="triple_8">888</string>
    <string name="locdesc">Change Location</string>
    <string name="condition">Weather Conditions for this day</string>
    <string name="choose_coords">Choose a Location</string>
    <string name="blank_coords">Enter a Zip Code</string>

    <!-- Buttons -->
    <string name="cancel">Cancel</string>
    <string name="currentLocation">My Location</string>
    <string name="specifiedLocation">Entered Zip Code</string>

    <!-- Weather types -->
    <string name="partly_cloudy">Partly Cloudy</string>

    <!--Days-->
    <string name="today">Today</string>
    <string name="tomorrow">Tomorrow</string>
    <string name="plusTwo">2 Days Ahead</string>
    <string name="plusThree">3 Days Ahead</string>
    <string name="plusFour">4 Days Ahead</string>
</resources>
