<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <EditText
        android:id="@+id/et_coords"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text = "@string/blank_coords"
        android:textSize="30sp"
        android:gravity="center"
        android:inputType="number"
        android:hint="@string/blank_coords"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_currentLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentLocation"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btn_newLocation"
        app:layout_constraintTop_toBottomOf="@+id/et_coords"/>

    <Button
        android:id="@+id/btn_newLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/specifiedLocation"
        app:layout_constraintStart_toEndOf="@+id/btn_currentLocation"
        app:layout_constraintTop_toBottomOf="@+id/et_coords"
        app:layout_constraintEnd_toEndOf="parent"/>

    <Button
        android:id="@+id/btn_cancelLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_currentLocation"/>

</android.support.constraint.ConstraintLayout>