<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/darker_gray"
    tools:context=".MainActivity">

    <LinearLayout
        android:id="@+id/ll_location"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:background="@android:color/holo_blue_dark"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/cl_currentConditions">
        <TextView
            android:id="@+id/tv_Location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:gravity="center_horizontal"
            android:textStyle="bold"
            android:textSize="30sp"
            android:textColor="@android:color/black"
            android:text="@string/app_name"/>
        <ImageButton
            android:id="@+id/btn_changeLocation"
            android:layout_width="0dp"
            android:layout_height="50dp"
            android:layout_weight="1"
            android:background="@drawable/location"
            android:contentDescription="@string/locdesc"/>
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/cl_currentConditions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/ll_location"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll_forecast">
        <ImageView
            android:id="@+id/iv_currentConditions"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/sunny"
            android:contentDescription="@string/condition"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>
        <TextView
            android:id="@+id/tv_currentTemp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/triple_8"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/iv_currentConditions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/tv_currentCondition"/>
        <TextView
            android:id="@+id/tv_currentCondition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partly_cloudy"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/iv_currentConditions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_currentTemp"/>
        <TextView
            android:id="@+id/tv_currentHumidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partly_cloudy"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/iv_currentConditions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_currentCondition"/>
        <TextView
            android:id="@+id/tv_currentPrecip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/partly_cloudy"
            android:textStyle="bold"
            android:textSize="20sp"
            android:gravity="center"
            app:layout_constraintEnd_toStartOf="@id/iv_currentConditions"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_currentHumidity"
            app:layout_constraintBottom_toBottomOf="parent"/>

    </android.support.constraint.ConstraintLayout>

    <LinearLayout
        android:id="@+id/ll_forecast"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cl_currentConditions">
        <LinearLayout
            android:id="@+id/ll_day0"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_day0_picture"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/condition"/>
            <TextView
                android:id="@+id/tv_day0_high"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/triple_8"/>
            <TextView
                android:id="@+id/tv_day0_low"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/triple_8"/>
            <TextView
                android:id="@+id/tv_day0_precip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/triple_8"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_day1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_day1_picture"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/condition"/>
            <TextView
                android:id="@+id/tv_day1_high"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/triple_8"/>
            <TextView
                android:id="@+id/tv_day1_low"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/triple_8"/>
            <TextView
                android:id="@+id/tv_day1_precip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/triple_8"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_day2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_day2_picture"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/condition"/>
            <TextView
                android:id="@+id/tv_day2_high"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/triple_8"/>
            <TextView
                android:id="@+id/tv_day2_low"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/triple_8"/>
            <TextView
                android:id="@+id/tv_day2_precip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/triple_8"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_day3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_day3_picture"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/condition"/>
            <TextView
                android:id="@+id/tv_day3_high"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/triple_8"/>
            <TextView
                android:id="@+id/tv_day3_low"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/triple_8"/>
            <TextView
                android:id="@+id/tv_day3_precip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/triple_8"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/ll_day4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/iv_day4_picture"
                android:layout_width="0dp"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:contentDescription="@string/condition"/>
            <TextView
                android:id="@+id/tv_day4_high"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/holo_orange_dark"
                android:text="@string/triple_8"/>
            <TextView
                android:id="@+id/tv_day4_low"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:textColor="@android:color/holo_blue_dark"
                android:text="@string/triple_8"/>
            <TextView
                android:id="@+id/tv_day4_precip"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/triple_8"/>
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>